working on adding next parts of the project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "blahblah",
         "lucide",
         "nextjs",
+        "sonner",
         "Taskify",
         "trpc",
         "usehooks",
